css/application.css
/* enable html5 in correct way for IE less then 9 */
article, aside, figure, footer, header, nav, div {
    display: block;
}

html {
    height:100%;
    max-height:100%;
}

body {
    font-family: 'Verdana', 'Arial';
    height:100%;
    margin: 0;
    max-height: 100%;
    padding: 0;
    position: relative;
}

button {
    border: 1px solid gray;
}

ul {
    margin: 0;
    padding: 0;
}

.view {
    /*background-color: red;*/
    display: none;
    height: 100%;
    position: relative;
}

/*******************************************************************
 * Map View
 ********************************************************************/
#map .map-container {
    height: 100%;
}

/** map controls **/
.map-control {
    position: absolute;
}

.map-control.move {
    background-image: url('../img/icons.png');
    border: 0;
    /*border:  1px solid blue;*/
    display: block;
    height: 25px;
    width: 25px;
}

.map-control.move.top,
.map-control.move.bottom {
    left: 49%;
}

.map-control.move.left,
.map-control.move.right {
    top: 48%;
}

.map-control.move.top {
    background-position: 148px 0;
    top: 10px;
}

.map-control.move.bottom {
    background-position: 97px 0;
    bottom: 50px;
}

.map-control.move.left {
    background-position: 200px 0;
    left: 10px;
}

.map-control.move.right {
    background-position: 250px 0;
    right: 10px;
}

/** bar **/
#bar {
    background: #000;
    display: inline-block;
    padding: 10px 0;
    width: 100%;
    text-align: center;

    position: absolute;
    bottom: 0
}

#bar li {
    display: inline-block;
    list-style: none outside none;
}

#bar a {
    background-image: url('../img/icons.png');
    background-repeat: no-repeat;
    display: inline-block;
    height: 24px;
    margin: 0 10px;
    text-indent: -9999px;
    width: 24px;
}

#bar .zoom-in-button {
    background-position: 0 0;
}

#bar .zoom-in-button.disabled {
    background-position: 0 -24px;
}

#bar .list-button {
    background-position: -50px 0;
}

#bar .list-button.disabled {
    background-position: -50px -24px;
}

#bar .refresh-button {
    background-position: -100px 0;
}

#bar .refresh-button.disabled {
    background-position: -100px -24px;
}

#bar .refresh-button.spinning {
    background: url(../img/ico_reload.gif) no-repeat 0 0;
}

#bar .search-button {
    background-position: -150px 0;
}

#bar .search-button.disabled {
    background-position: -150px -24px;
}

#bar .zoom-out-button {
    background-position: -200px 0;
}

#bar .zoom-out-button.disabled {
    background-position: -200px -24px;
}

#bar .map-button {
    background-position: -454px 0;
}

#bar .map-button.disabled {
    background-position: -454px -24px;
}

/**************************************************
 * Search View
 *************************************************/
#search {
    background: #000;
    color: #FFF;
}

